[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "khalidboumaghdar",email = "khalidboumaghdar07@gmail.com"}
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "<2"
numpy = "<2"
matplotlib = "<3"
requests = "^2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"